--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile&lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_self_edit_contact_info%3BL4I3V74RSmuL39ca4%2FWfuQ%3D%3D">Jerome Andre Wong</a>.
   </div>
 </body>
 </html>
